# portfolio

./: .gitignore  README.md
fraction-learning-app/: rgerg.py
nutrition-analytics/data/: ОСНОВНОЙ_СПРАВОЧНИК.xlsx
nutrition-analytics/notes/: Руководство пользователя.docx  Руководство разработчика.docx
nutrition-analytics/scripts/: .ini  gui_sports.py
nutrition-analytics/scripts/data/: Ответы на форму (1).pkl
nutrition-analytics/work/: desktop.ini
oop-car-collection/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  cli.py  gui.py  io_table.py  models.py  run_cli.sh  run_gui.sh  storage.py  test_cases.txt
oop-car-collection/include/: Appliance.h  Box3D.h  Entity.h  KitchenCabinet.h  KitchenPlan.h  Material.h  PrefixTree.h  ProcessMemory.h
oop-car-collection/projects/car_collection/: catalog.py  gui.py  hash_collection.py  main.py  tests.py
oop-car-collection/src/: Appliance.cpp  Box3D.cpp  KitchenCabinet.cpp  KitchenPlan.cpp  ProcessMemory.cpp  main.cpp
street-art-bot/: .gitignore  bot.py  requirements.txt  server.py
street-art-bot/data/: submissions.jsonl
street-art-bot/webapp/: index.html
